{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 12,
  "lineage": "24db3f1d-4c43-961e-90a1-72a71d9b6a9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:506995421637:internet-gateway/igw-01b4a593d449041c9",
            "id": "igw-01b4a593d449041c9",
            "owner_id": "506995421637",
            "region": "ap-south-2",
            "vpc_id": "vpc-00e79d02ef4903858"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "506995421637",
            "id": "igw-01b4a593d449041c9",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:506995421637:route-table/rtb-0ca3d2fe97e8a11a3",
            "id": "rtb-0ca3d2fe97e8a11a3",
            "owner_id": "506995421637",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b4a593d449041c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00e79d02ef4903858"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "506995421637",
            "id": "rtb-0ca3d2fe97e8a11a3",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba031d247e518d03",
            "region": "ap-south-2",
            "route_table_id": "rtb-0ca3d2fe97e8a11a3",
            "subnet_id": "subnet-07032cab51e04f619"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "506995421637",
            "id": "rtbassoc-0ba031d247e518d03",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:506995421637:security-group/sg-080aad8ed5f15333e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080aad8ed5f15333e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-app-sg",
            "name_prefix": "",
            "owner_id": "506995421637",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00e79d02ef4903858"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "506995421637",
            "id": "sg-080aad8ed5f15333e",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:506995421637:subnet/subnet-07032cab51e04f619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07032cab51e04f619",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "506995421637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "vpc_id": "vpc-00e79d02ef4903858"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "506995421637",
            "id": "subnet-07032cab51e04f619",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:506995421637:vpc/vpc-00e79d02ef4903858",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068f72151169a753f",
            "default_route_table_id": "rtb-056f164e81e88f1cb",
            "default_security_group_id": "sg-034b84eece6aa5e0f",
            "dhcp_options_id": "dopt-05f4886a8659af13f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e79d02ef4903858",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056f164e81e88f1cb",
            "owner_id": "506995421637",
            "region": "ap-south-2",
            "tags": {
              "Name": "devops-project-vpc"
            },
            "tags_all": {
              "Name": "devops-project-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "506995421637",
            "id": "vpc-00e79d02ef4903858",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}